# ngsolve-cpp-apps

./: .gitignore  CMakeLists.txt
elasticity/: CMakeLists.txt  ngs_arnoldi.cpp
example_data/: tuningfork.vol
ngs_coefficient_function/: CMakeLists.txt  ngs_coefficientf.cpp
ngs_petsc.poission/: CMakeLists.txt  ngs_petsc_poission.cpp  petsc_solve.cpp
poission/: CMakeLists.txt  ngs_poission.cpp
